# bd_accumulation

./: .gitignore  Cargo.toml  README.md
accumulation/: Cargo.toml
accumulation/src/: lib.rs
accumulation/src/ARC/: mod.rs  reed_solomon.rs
accumulation/src/bd_as/: data_structures.rs  mod.rs
accumulation/src/bd_as/r1cs_nark/: data_structures.rs  mod.rs  poseidon_config.rs
src/: data_structures.rs  lib.rs
src/bd_as/: mod.rs  reed_solomon.rs
