[package]
name = "accumulation"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { version = "^0.4.0", default-features = false }
ark-ec = { version = "^0.4.0", default-features = false }
ark-std = { version = "^0.4.0", default-features = false }
ark-relations = { version = "^0.4.0", default-features = false }
ark-serialize = { version = "^0.4.0", default-features = false, features = [ "derive" ] }
ark-r1cs-std = { version = "^0.4.0", default-features = false, optional = true }
ark-crypto-primitives = {version = "^0.4.0", default-features=false,features=["std", "r1cs", "crh","merkle_tree","prf"]}
derivative = {version="^2.2.0"}

