[package]
name = "accumulation"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
ark-ff = { version = "^0.4.0", default-features = false }
ark-poly = {version = "^0.4.0"}
ark-ec = { version = "^0.4.0", default-features = false }
ark-std = { version = "^0.4.0", default-features = false }
ark-relations = { version = "^0.4.0", default-features = false }
ark-serialize = { version = "^0.4.0", default-features = false, features = [ "derive" ] }
ark-r1cs-std = { version = "^0.4.0" }
ark-crypto-primitives = {version = "^0.4.0", default-features=false,features=["std", "r1cs", "crh","merkle_tree","prf"]}
ark-ed-on-bls12-381 = {version="0.4.0", features = ["r1cs"]}
derivative = {version="^2.2.0"}

